data/derived/fa15/progs/unify/prog1018.ml.out
Characters 672-673:
  | MultDivBy6 (e1,e2)    -> ((eval (e1,x,y)) *. (eval (e2,x,y))) /.6;;
                                                                    ^
Error: This expression has type int but an expression was expected of type
         float
